# Artisan-Core

./: ArtGUI.py  ArtisanMain.py  Changelog.txt  README.MD  requirements.txt  requirements_ArtGUI.txt
AGUI/: CappedConeWindow.py  DFEditor.py  JSONtreeview.py  RibbonTools.py  __init__.py  about.py  base.py  util.py  vtkbase.py  wizard.py
Artisan/: CalcBase.py  Compress.py  Conformal.py  Cube.py  Evaluation.py  ExFieldOpt.py  Field.py  FieldCalc_ops.py  GMatPoints.py  GMesh.py  GPUBase.py  GenField_ops.py  GenHMesh.py  Geom.py  GeomObj.py  HexMesh.py  Lattice.py  LatticeObj.py  Mega.py  Mesh.py  QuadMesher.pyd  Service.py  Snippetslib.pyd  SnippetslibGPU.pyd  Types.py  Workflow.py  __init__.py  dev_FieldMerge.py
Doc/: .buildinfo  API.html  ArtGUI.html  Compression.html  Conformal.html  Conformal_02.html  FEAInter.html  FieldContainer.html  Intro.html  LineStructure.html  Mesh.html  Mesher.html  Mesher_01.html  Mesher_02.html  Mesher_99.html  OPField.html  OtherTools.html  Primitive.html  ProcMesh.html  Supports.html  SurfaceLattice.html  TransLattice.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
Interfaces/Cpp/: CMakeLists.txt
Interfaces/Cpp/src/: Artisan_Example_01.cpp  Artisan_Example_02.cpp  Artisan_Example_03.cpp
Test_json/: Bar_FieldOffset.txt  BingDunDun_CustomInfill_Geom.txt  BingDunDun_CustomInfill_Strut.txt  BingDunDun_CustomInfill_TPMS.txt  BingDunDun_Infill_LR.txt  BingDunDun_Mesh_Infill_LR.txt  CustomLattice_Geom.txt  CustomLattice_Strut.txt  CustomLattice_TPMS.txt  EngineBracket_HS_Infill_Lin_LR.json  GenTetBasicMesh.mld  (+19 more)
(+606 files in other folders)
